Se agrega varible de correoPrueba en application.yaml.